ENH: add plotting code for comparing genome as ref to localised ref

--- a/manuscript_scripts/mi_plot.cfg
+++ b/manuscript_scripts/mi_plot.cfg
@@ -1,6 +1,9 @@
 [1-way plot]
-figsize=(8, 4)
-xlabel_fontsize=10
-ylabel_fontsize=10
-xtick_fontsize=10
-ytick_fontsize=10
+figsize=(6, 6)
+figwidth=6
+xlabel_fontsize=30
+ylabel_fontsize=30
+xtick_fontsize=18
+ytick_fontsize=18
+xlabel_pad=0.01
+ylabel_pad=0.0
